# alloy

./: .env.example  AGENTS.md  Cargo.toml  README.md  test_client.sh
.github/workflows/: bench.yml  check.yml  ci.yml  clippy.yml  test.yml
benches/: crdt_operations.rs
src/: api.rs  app_state.rs  database.rs  document.rs  document_manager.rs  error.rs  lib.rs  main.rs  persistence.rs  recorder.rs
src/document/: active_document.rs  lifecycle.rs  mod.rs  peer.rs
src/persistence/: memory.rs  mod.rs  postgres.rs  recorder.rs  store.rs  types.rs
src/session/: mod.rs  peer.rs  protocol.rs  ticket.rs
tests/: api_endpoints.rs  concurrent_tests.rs  postgres_store_tests.rs  property_tests.rs  ticket_tests.rs  websocket_tests.rs
tests/common/: mod.rs
