[package]
name = "alloy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
yrs = "0.18.8"
yrs-axum = "0.8.2"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2"
tower-http = { version = "0.6.7", features = ["trace"] }

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.24"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
