[package]
name = "alloy"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.7", features = ["ws", "macros"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
yrs = "0.18.8"
yrs-axum = "0.8.2"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sonyflake = "0.2"
thiserror = "2"
tower-http = { version = "0.6.7", features = ["trace"] }
async-trait = "0.1"
tokio-util = "0.7"
serde = { version = "1", features = ["derive"] }
jsonwebtoken = "9"
time = { version = "0.3", features = ["macros"] }
rand = "0.8"

[dev-dependencies]
tokio-test = "0.4"
tokio-tungstenite = "0.24"
proptest = "1.0"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
reqwest = { version = "0.12", features = ["json"] }

[[bench]]
name = "crdt_operations"
harness = false

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
